--- a/app/config.json
+++ b/app/config.json
@@ -1,5 +1,5 @@
 {
-  "wallet_url": "http://localhost:8081",
-  "issuer_url": "http://localhost:8082",
-  "verifier_url": "http:/localhost:8083"
+  "wallet_url": "http://10.0.0.21:8081",
+  "issuer_url": "http://10.0.0.21:8082",
+  "verifier_url": "http:/10.0.0.21:8083"
 }
