--- a/services/service_provider/src/config.json
+++ b/services/service_provider/src/config.json
@@ -1,4 +1,16 @@
 {
-    "licenseType": "UNSWCredential",
-    "requiredAttributes": ["zID", "expiryDate"]
+    "definitions": {
+      "housing": {
+        "licenseType": "UNSWCredential",
+        "requiredAttributes": ["zID", "expiryDate"]
+      },
+      "exams": {
+        "licenseType": "UNSWCredential",
+        "requiredAttributes": ["firstName", "zID", "expiryDate"]
+      }
+    },
+    "wallet_url": "http://10.0.0.21:8081",
+    "issuer_url": "http://10.0.0.21:8082",
+    "verifier_url": "http://10.0.0.21:8083"
 }
+  
